fixed up PL and created PL vending machine according to the original PL model. Modified existing classes to match new PL.